# flask-private-deepface

./: .coverage  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  test_flask_private_deepface.py
.github/workflows/: build.yaml.yaml  flask-private-deepface.yml.yml
.reuse/: dep5
deepface/: DeepFace.py
deepface/basemodels/: DlibResNet.py  VGGFace.py
deepface/commons/: distance.py  functions.py  realtime.py
deepface/detectors/: FaceDetector.py  OpenCvWrapper.py
